--- a/Projects/TicTacToe/style.css
+++ b/Projects/TicTacToe/style.css
@@ -83,3 +83,44 @@ body{
 .left{
     border-left: 0;
 }
+
+.modal{
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0,0,0.7);
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.modal-content{
+    background-color: white;
+    padding: 2.5rem;
+    border-radius: 10px;
+    text-align: center;
+    /* animation: modalPopup 0.3 ease-out; */
+    min-width: 300px;
+    box-shadow: 0 4px 20px rgba(0,0,0,0.2);
+}
+
+.modal-content h2{
+    color: #911d91;
+    margin-bottom: 1.5rem;
+    font-family: 'Baloo Bhaina',cursive;
+    font-size: 1.8rem;
+}
+
+.Play-again{
+    padding: 0.8rem 2rem;
+    background: #911d91;
+    color: white;
+    border: none;border-radius: 6px;
+    cursor: pointer;
+    font-family: 'Boolo Bhaina',cursive;
+    font-size: 1.2rem;
+    transition: background-color 0.3 ease;
+}
