--- a/Projects/QuizWeb/style.css
+++ b/Projects/QuizWeb/style.css
@@ -8,13 +8,14 @@ body{
     background-color: #ffe5b4;
 }
 
-.start-btn{
+.start-btn,.infobox,.quizbox,.resultbox{
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
     border-radius: 5px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
+
 }
 
 .start-btn button{
@@ -30,21 +31,13 @@ body{
 }
 
 .infobox{
-    position: absolute;
-    top: 50%;
-    left: 50%;
     width: 540px;
     background: #ffffff;
-    border-radius: 5px;
-    transform: translate(-50%,-50%) scale(0.9);
-    opacity: 0;
     pointer-events: none;
-    transform: all 0.3s ease;
-    /* after cliking start quiz */
-    opacity: 1;
+    opacity: 0;
     z-index: 5;
-    pointer-events: auto;
     transform: translate(-50%, -50%) scale(1);
+    transform: all 0.3s ease;
 }
 
 .info-title{
@@ -101,7 +94,7 @@ body{
     color: #007bff;
 }
 
-.restart{
+.continue{
     background-color: #007bff;
     color: white;
 }
@@ -111,6 +104,161 @@ body{
     color: white;
 }
 
-.restart:hover{
+.continue:hover{
     filter: grayscale(30%);
+}
+
+.quizbox{
+    width: 550px;
+    background: #ffffff;
+    border-radius: 5px;
+    transform: translate(-50%,-50%) scale(0.9);
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.3s ease;
+}
+.quizbox header{
+    position: relative;
+    z-index: 2;
+    height: 70px;
+    padding: 0 30px;
+    background: #ffffff;
+    border-radius: 5px 5px 0 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.1);
+}
+
+.quizbox .title{
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.quizbox header .timer{
+    color: #004085;
+    background: #cce5ff;
+    border: 1px solid #b8daff;
+    height: 45px;
+    padding: 0 8px;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 145px;
+}
+
+.quizbox header .timer .time_left_msg{
+    font-weight: 400;
+    font-size: 17px;
+    user-select: none;
+}
+
+.quizbox header .timer .timer_sec{
+    font-size: 18px;
+    font-weight: 500;
+    height: 30px;
+    width: 45px;
+    color: #fff;
+    border-radius: 5px;
+    line-height: 30px;
+    text-align: center;
+    background: #343a40;
+    border: 1px solid #343a40;
+    user-select: none;
+}
+
+.quizbox header .time-line {
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    height: 3px;
+    background: #007bff;
+}
+
+section{
+    background: #fff;
+    padding: 25px 30px 20px 30px;
+}
+
+.que_txt{
+    font-weight: 600;
+    font-size: 25px;
+}
+
+.option_list{
+    padding: 20px 0px;
+    display: block;
+}
+
+section .option_list .option{
+    background: aliceblue;
+    border: 1px solid #84c5fe;
+    border-radius: 5px;
+    padding: 8px 15px;
+    font-size: 17px;
+    margin-bottom: 15px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.count {
+  display: inline-flex;
+}
+
+
+footer{
+    height: 60px;
+    padding: 0 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-top: 1px solid lightgray;
+}
+
+footer .total_que span{
+    display: flex;
+    user-select: none;
+}
+
+.footer .total_que span span:first-child{
+    padding-left: 0px;
+}
+
+.no{
+    font-weight: 500;
+    padding: 0px 5px;
+}
+
+footer button.show{
+    opacity: 1;
+    pointer-events: auto;
+    transform: scale(1);
+    background: #ff7f50;
+}   
+
+footer button {
+    height: 40px;
+    padding: 0 13px;
+    font-size: 18px;
+    font-weight: 400;
+    cursor: pointer;
+    outline: none;
+    color: #fff;
+    border-radius: 5px;
+    border: 1px solid #ff8c00;
+    line-height: 10px;
+    pointer-events: none;
+    transform: scale(0.95);
+    transition: all 0.3s ease;
+}
+/* After clicking it appears */
+
+.infobox.activeInfo, .quizbox.activeQuiz, .resultbox.activeResult {
+    opacity: 1;
+    z-index: 5;
+    pointer-events: auto;
+    transform: translate(-50%, -50%) scale(1);
 }
